# tedbot

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  example.config.toml
.cargo/: config.toml
lastfm/: Cargo.toml
lastfm/src/: lib.rs
lastfm/src/model/: album.rs
src/: codec.rs  commands.rs  config.rs  db.rs  handler.rs  handlers.rs  main.rs  util.rs  wordle.rs
src/commands/: mod.rs
src/wordle/: mod.rs  model.rs  parser.rs
tedbot/: Cargo.toml
tedbot/src/: commands.rs  config.rs  main.rs
tedbot/src/commands/: mod.rs  openai.rs  wordle.rs
