[package]
name = "tedbot-rs"
version = "0.1.0"
edition = "2021"
description = "Rust discord bot."
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/tedbot-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["discord", "bot"]
publish = false

[profile.dev]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
# strip = "symbols"

[features]
default = []

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
poise = "0.5.1"
anyhow = "1.0.66"
dotenvy = "0.15.6"

[dependencies.tokio]
version = "1.23.0"
default-features = false
features = ["rt-multi-thread", "macros", "signal", "parking_lot"]
