[package]
name = "tedbot-rs"
version = "0.1.0"
edition = "2021"
description = "Discord bot"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/tedbot"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["discord", "bot"]
publish = false

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = []
dotenv = ["dotenvy"]

[dependencies]
anyhow = "1.0.66"
dotenvy = { version = "0.15.6", optional = true }
poise = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "signal", "parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
