[package]
name = "tedbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
lastfm = { path = "../lastfm" }
poise = "0.5.2"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "signal", "parking_lot"] }
toml = "0.7.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
