[package]
name = "tedbot"
version = "0.1.0"
edition = "2021"
description = "Discord bot!"
authors = ["Teddy Byron <ted@tedbyron.com>"]
repository = "https://github.com/tedbyron/tedbot"
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["discord", "bot"]
publish = false

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.2"
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "std"] }
humantime = "2.1.0"
nom = "7.1.3"
poise = "0.5.6"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal", "parking_lot"] }
toml = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
